# fabsim-example-project

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: mesh.off
src/: composite.cpp  membrane.cpp  rod.cpp
